--- a/part2/index.html
+++ b/part2/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id="body">
     
-    <header id="header"> <div class="title">My Gallary</div> 
+    <header id="header"> <div class="title">My Gallery</div> 
         <div class="search">
             <div>
                 <i class="fas fa-search"></i>
